// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextareaField Disabled 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div>
    <label
      className="TextareaField__Label-sc-16uni0c-3 ekHYWB"
    >
      <textarea
<<<<<<< HEAD
        className="TextareaField__Textarea-sc-16uni0c-2 euCqBS"
=======
        className="TextareaField__Textarea-sc-16uni0c-2 gYUsXx"
>>>>>>> master
        disabled={true}
        placeholder="Placeholder text"
        value="Value text"
      />
      <p
        className="TextareaField__LabelText-sc-16uni0c-0 ixGIyV"
        disabled={true}
      >
        Label text
      </p>
    </label>
    <div
      className="TextareaField__SubContainer-sc-16uni0c-4 ilPzso"
    >
      <small
        className="TextareaField__HelpText-sc-16uni0c-1 enucUr"
      >
        Help text
      </small>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextareaField Error 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div>
    <label
      className="TextareaField__Label-sc-16uni0c-3 ekHYWB"
    >
      <textarea
<<<<<<< HEAD
        className="TextareaField__Textarea-sc-16uni0c-2 euCqBS error"
=======
        className="TextareaField__Textarea-sc-16uni0c-2 gYUsXx error"
>>>>>>> master
        disabled={false}
        placeholder="Placeholder text"
        value="Value text"
      />
      <p
        className="TextareaField__LabelText-sc-16uni0c-0 ixGIyV"
        disabled={false}
      >
        Label text
      </p>
    </label>
    <div
      className="TextareaField__SubContainer-sc-16uni0c-4 ilPzso"
    >
      <small
        className="TextareaField__HelpText-sc-16uni0c-1 enucUr error"
      >
        Help text
      </small>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextareaField Normal 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div>
    <label
      className="TextareaField__Label-sc-16uni0c-3 ekHYWB"
    >
      <textarea
<<<<<<< HEAD
        className="TextareaField__Textarea-sc-16uni0c-2 euCqBS"
=======
        className="TextareaField__Textarea-sc-16uni0c-2 gYUsXx"
>>>>>>> master
        disabled={false}
        placeholder="Placeholder text"
        value="Value text"
      />
      <p
        className="TextareaField__LabelText-sc-16uni0c-0 ixGIyV"
        disabled={false}
      >
        Label text
      </p>
    </label>
    <div
      className="TextareaField__SubContainer-sc-16uni0c-4 ilPzso"
    >
      <small
        className="TextareaField__HelpText-sc-16uni0c-1 enucUr"
      >
        Help text
      </small>
    </div>
  </div>
</div>
`;
